Toolbar shows up over every element. Overflow-y fixed.

--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -2,7 +2,6 @@ div.sidebar {
     width: 20vw;
     height: 100vh;
     overflow-y: scroll;
-    background-color: #f4f4f4;
     display: flex;
     flex-direction: column;
     
